--- a/configs/datasets/dataset_nanoAODv12.yaml
+++ b/configs/datasets/dataset_nanoAODv12.yaml
@@ -1,4 +1,11 @@
 years:
+    "2022preEE":
+        Data:
+            data_A: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/SingleMuon_Run2018A
+            data_B: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/SingleMuon_Run2018B
+            data_C: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/SingleMuon_Run2018C
+            data_D: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/SingleMuon_Run2018D
+
     "2018":
         Data:
             data_A: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/SingleMuon_Run2018A
@@ -8,7 +15,7 @@ years:
 
         DY:
             # dy_M-10To50: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
-            dy_M-50: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL18NanoAODv9
+            # dy_M-50: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/DYJetsToLL_M-50_TuneCP5_13TeV-amcatnloFXFX-pythia8_RunIISummer20UL18NanoAODv9
             # dy_M-100To200: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
             # dy_M-200To500: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
             # dy_M-500To700: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
@@ -18,7 +25,7 @@ years:
             # dy_M-1500To2000: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
             # dy_M-2000To3000: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
             # dy_VBF_filter: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
-            # dy_m105_160_vbf_amc: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
+            dy_m105_160_vbf_amc: /eos/purdue/store/user/hyeonseo/Run2UL/UL2018/DYJetsToLL_M-105To160_VBFFilter_TuneCP5_PSweights_13TeV-amcatnloFXFX-pythia8/nanoV12_*/
             # dy_VBF_filter_customJMEoff: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
             # dy_VBF_filter_Amandeep10_6_26: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
             # dy_VBF_filter_Amandeep10_6_32: /eos/purdue/store/user/rasharma/customNanoAOD_Others/UL2018/
