Ram1123 dev improve (#6)
* Removed plots

* Updated to custom-bins

* Added script to fetch SF to JSON file

* Working version of z-pt weight extractor from .root files to json file

* final SF extraction to json using correctionlib

* Cutflow addition using coffea cutflow method

* removed added png file

* Update running version of z-pt code #6

* Improvemetn of z-pt weight extractor: #6

* Updated 2016post zpt

* Running version of new zpt weight for 2016postVPF

* minor update or missing files

* - Updated the way we are reading input dataset in the pre-stage.py.
- Updated the file name of pre-stage output json file and propagated to the stage1.
- Cleaned part of stage1
- Added two separate yaml file having v9 adn v12 dataset names
- Updated logger with rich
- Updated copperhead_processor adapting with three functions for 2016postVFP.
- Replaced print statements with logger.
- Refactor zpt_validation_plotter.py to improve logging and update save path

- Updated default save path for plots to include 'UsingAcoplanarityWgt_CustomBins'.
- Enhanced error handling and logging for missing variables and unknown processes.

* - Added script to locate the files having the LZMA error #8
- updated logger in prestage and stage1
- Updated sample lists in nanoAODv12

* Just logger update

* added scripts for LZMA error handling #8

- Updated dataset paths for 2018 in dataset_nanoAODv12.yaml.
- Added files_to_delete.py to locate and remove files causing LZMA errors.
- Introduced main_script_dask_to_run_cppProgram.py find run the script `muon_pt_reader.C` that tries to find files having LZMA issue
-  muon_pt_reader.C for reading muon pT from ROOT files this helps to find the files having LZMA issue.

* update docs and zpt reweight code

* Updated 2018 Z-pt weights and propagated the info to copperhead #6

* Minor improvements to the Z-pt code

* BUGFIX: fix the bugs introduced by the merge conflict. Also, checked the cut-flow table for data and it is identical between my branch

--- a/configs/parameters/SF_filelist.yaml
+++ b/configs/parameters/SF_filelist.yaml
@@ -46,8 +46,8 @@ pu_file_mc: # source https://github.com/cms-sw/cmssw/blob/CMSSW_10_6_X/SimGenera
   2016_RERECO: data/pileup/pileup_profile_Summer16.root
   '2017_RERECO': data/pileup/mcPileup2017.root
   '2018_RERECO': data/pileup/mcPileup2018.root
-  2022preEE: data/pileup/2022_Summer22/puWeights.json.gz 
-  2022postEE: data/pileup/2022_Summer22EE/puWeights.json.gz 
+  2022preEE: data/pileup/2022_Summer22/puWeights.json.gz
+  2022postEE: data/pileup/2022_Summer22EE/puWeights.json.gz
 muSFFileList:
   2016preVFP:
   - id:
@@ -232,7 +232,7 @@ new_zpt_weights_file:
   '2018_RERECO': data/zpt_rewgt/fitting/zpt_rewgt_params.yaml
   2022preEE: data/reweight_zpt_2018_nJetBinned_new.histo.root
   2022postEE: data/reweight_zpt_2018_nJetBinned_new.histo.root
-jetpuid_sf_file: # old method as of Dec 16 2024, 
+jetpuid_sf_file: # old method as of Dec 16 2024,
   2016preVFP: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
   2016postVFP: data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
   '2017': data/PUID_106XTraining_ULRun2_EffSFandUncties_v1.root
@@ -246,11 +246,11 @@ jmar_sf_file:
   2016preVFP: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2016preVFP_UL/jmar.json.gz
   2016postVFP: /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2016postVFP_UL/jmar.json.gz
   '2017': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2017_UL/jmar.json.gz # while this is listed, we use jetpuid_sf_file for 2017 (old method)
-  # '2018': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2018_UL/jmar.json.gz
+  '2018': /cvmfs/cms.cern.ch/rsync/cms-nanoAOD/jsonpog-integration/POG/JME/2018_UL/jmar.json.gz
   # 2016preVFP: data/POG/JME/2016preVFP_UL/jmar.json.gz
   # 2016postVFP: data/POG/JME/2016postVFP_UL/jmar.json.gz
   # '2017': data/POG/JME/2017_UL/jmar.json.gz # while this is listed, we use jetpuid_sf_file for 2017 (old method)
-  '2018': data/POG/JME/2018_UL/jmar.json.gz
+  # '2018': data/POG/JME/2018_UL/jmar.json.gz
   2016_RERECO: dummy
   '2017_RERECO': dummy
   '2018_RERECO': dummy
