Improved Z-pt weights (with custom bins) #12

--- a/data/zpt_rewgt/fitting/zpt_rewgt_params_minnlo.yaml
+++ b/data/zpt_rewgt/fitting/zpt_rewgt_params_minnlo.yaml
@@ -1,78 +1,94 @@
 '2018':
-  njet_0:
-    100:
-      p0: 1.0869414372731887
-      p1: -0.0019402159549685935
-      p2: 0.00027087358381735056
-      p3: -1.2483567167199965e-06
-      p4: 0.0
-      p5: 0.0
-      p0_err: 0.878107040567851
-      p1_err: 0.07439698981706151
-      p2_err: 0.001840178792162026
-      p3_err: 1.3661138580601032e-05
-      p4_err: 0.0
-      p5_err: 0.0
-      fp0: 1.0384910424444473
-      fp0_err: 0.6688314084753659
-      fp1: -0.040111627352790405
-      fp1_err: 0.30791290102006713
-      fp2: 0.004614000423693176
-      fp2_err: 0.029984701403149204
-      horizontal_c0: 2.516226243182125
-      polynomial_range:
-        x_min: 10
-        x_max: 90
-  njet_1:
-    100:
-      p0: 0.9235625834891078
-      p1: 0.0007260775210469648
-      p2: 4.522978733121453e-05
-      p3: -3.363506596088516e-07
-      p4: 0.0
-      p5: 0.0
-      p0_err: 0.7211397272314637
-      p1_err: 0.044827202458382544
-      p2_err: 0.0008477820772961304
-      p3_err: 4.946310916469015e-06
-      p4_err: 0.0
-      p5_err: 0.0
-      fp0: 0.9527226069059134
-      fp0_err: 0.6287088463476206
-      fp1: -0.039503599699969416
-      fp1_err: 0.3315647792768409
-      fp2: 0.00691191094652003
-      fp2_err: 0.05064237839438248
-      fp3: -0.00028537239633607934
-      fp3_err: 0.0022407957538464257
-      horizontal_c0: 1.1147143444651284
-      polynomial_range:
-        x_min: 15
-        x_max: 100
-  njet_2:
-    100:
-      p0: 0.8455878841895101
-      p1: 0.00018695353599810876
-      p2: 2.705476987638153e-05
-      p3: -1.4765571147205376e-07
-      p4: 0.0
-      p5: 0.0
-      p0_err: 0.4091904073465573
-      p1_err: 0.027245241191071704
-      p2_err: 0.0005257107990983094
-      p3_err: 3.045950216730352e-06
-      p4_err: 0.0
-      p5_err: 0.0
-      fp0: 0.8160725428059048
-      fp0_err: 0.6670154924772828
-      fp1: -0.02857625020695219
-      fp1_err: 0.38348231024116447
-      fp2: 0.004072660457259226
-      fp2_err: 0.04657064359374793
-      horizontal_c0: 0.9917617841968334
-      polynomial_range:
-        x_min: 8
-        x_max: 120
+    njet_0:
+      100:
+        f0_p0: 1.0417852317448648
+        f0_p1: -0.039976869728121624
+        f0_p2: 0.004552544622610171
+        f0_p3: 0.0
+        f0_p4: 0.0
+        f0_p5: 0.0
+        f0_p0_err: 0.30005048962508846
+        f0_p1_err: 0.1382319984959406
+        f0_p2_err: 0.013451496145336536
+        f0_p3_err: 0.0
+        f0_p4_err: 0.0
+        f0_p5_err: 0.0
+        f1_p0: 1.035857829698559
+        f1_p1: 0.0045711172855516955
+        f1_p2: 1.0526566290848253e-05
+        f1_p3: 2.7816442183068363e-06
+        f1_p4: -2.089781560891956e-08
+        f1_p5: 0.0
+        f1_p0_err: 0.49461085341163535
+        f1_p1_err: 0.0569150570965671
+        f1_p2_err: 0.002257128089053014
+        f1_p3_err: 3.441579463231068e-05
+        f1_p4_err: 1.6923385756372176e-07
+        f1_p5_err: 0.0
+        horizontal_c0: 2.484785946876423
+        polynomial_range:
+          xmin1: 10
+          xmax1: 120
+    njet_1:
+      100:
+        f0_p0: 0.9709687461386317
+        f0_p1: -0.04917701978256398
+        f0_p2: 0.008350039315244084
+        f0_p3: -0.0003485173761267567
+        f0_p4: 0.0
+        f0_p5: 0.0
+        f0_p0_err: 0.6527676299508949
+        f0_p1_err: 0.3667569181819843
+        f0_p2_err: 0.05992521955220137
+        f0_p3_err: 0.0028410440548204156
+        f0_p4_err: 0.0
+        f0_p5_err: 0.0
+        f1_p0: 1.0650305987993847
+        f1_p1: -0.012596883072027207
+        f1_p2: 0.00046075230725440186
+        f1_p3: -5.548875436982117e-06
+        f1_p4: 2.2657894767212516e-08
+        f1_p5: 0.0
+        f1_p0_err: 0.881805787335469
+        f1_p1_err: 0.06149246285688381
+        f1_p2_err: 0.0014864527227866318
+        f1_p3_err: 1.887342935933839e-05
+        f1_p4_err: 1.0243495207973612e-07
+        f1_p5_err: 0.0
+        horizontal_c0: 1.1273603291013832
+        polynomial_range:
+          xmin1: 14
+          xmax1: 100
+    njet_2:
+      100:
+        f0_p0: 0.8156969126106172
+        f0_p1: -0.027585354992117447
+        f0_p2: 0.003907533377370909
+        f0_p3: 0.0
+        f0_p4: 0.0
+        f0_p5: 0.0
+        f0_p0_err: 0.6673105084241877
+        f0_p1_err: 0.3835848694224256
+        f0_p2_err: 0.04656617674687625
+        f0_p3_err: 0.0
+        f0_p4_err: 0.0
+        f0_p5_err: 0.0
+        f1_p0: 0.8472826722747822
+        f1_p1: 9.112007886164387e-05
+        f1_p2: 2.9263029922258367e-05
+        f1_p3: -1.6340390225818852e-07
+        f1_p4: 0.0
+        f1_p5: 0.0
+        f1_p0_err: 0.4650133805970966
+        f1_p1_err: 0.03395481746763111
+        f1_p2_err: 0.00066498600412057
+        f1_p3_err: 3.7644424890788018e-06
+        f1_p4_err: 0.0
+        f1_p5_err: 0.0
+        horizontal_c0: 0.9940938886295678
+        polynomial_range:
+          xmin1: 8
+          xmax1: 120
 '2017':
   njet_0:
     100:
