--- a/data/zpt_rewgt/fitting/zpt_rewgt_params_minnlo.yaml
+++ b/data/zpt_rewgt/fitting/zpt_rewgt_params_minnlo.yaml
@@ -1,76 +1,94 @@
 '2018':
-  njet_0:
-    100:
-      p0: 1.172516622313164
-      p1: -0.023708638797369862
-      p2: 0.0011887016528390696
-      p3: -1.5532832918112194e-05
-      p4: 6.085260301825586e-08
-      p5: 0.0
-      p0_err: 1.1001248676866857
-      p1_err: 0.06607325044254518
-      p2_err: 0.0013239071074452147
-      p3_err: 1.4600693326581694e-05
-      p4_err: 7.235670504520102e-08
-      p5_err: 0.0
-      fp0: 0.9593345029967884
-      fp0_err: 2.088894699758891
-      fp1: -0.02068899326647877
-      fp1_err: 0.8469272408217245
-      fp2: 0.002592257906864887
-      fp2_err: 0.06967862204856377
-      horizontal_c0: 1.1700516296308536
-      polynomial_range:
-        x_min: 10
-        x_max: 115
-  njet_1:
-    100:
-      p0: 1.2713381241311013
-      p1: -0.021056138117402777
-      p2: 0.0005112961429061675
-      p3: -4.86767467539605e-06
-      p4: 1.645440754666095e-08
-      p5: 0.0
-      p0_err: 0.9946953168959131
-      p1_err: 0.06350013559111148
-      p2_err: 0.0014145255908011786
-      p3_err: 1.7705216181787455e-05
-      p4_err: 9.97069568592692e-08
-      p5_err: 0.0
-      fp0: 1.047538029098013
-      fp0_err: 1.4256152618729194
-      fp1: -0.031873784799517635
-      fp1_err: 0.6662593698541617
-      fp2: 0.003658196154067882
-      fp2_err: 0.06510228870125276
-      horizontal_c0: 1.052035507841021
-      polynomial_range:
-        x_min: 10
-        x_max: 100
-  njet_2:
-    100:
-      p0: 0.9842532589697164
-      p1: -0.0023218765976968157
-      p2: 3.9145837143129623e-05
-      p3: -1.4217840705856225e-07
-      p4: 0.0
-      p5: 0.0
-      p0_err: 0.9306849397499789
-      p1_err: 0.06082590103346679
-      p2_err: 0.0012091644791584683
-      p3_err: 7.360657632352782e-06
-      p4_err: 0.0
-      p5_err: 0.0
-      fp0: 0.9424473114940338
-      fp0_err: 1.3528575134892182
-      fp1: -0.02713743224346652
-      fp1_err: 0.6328492225440292
-      fp2: 0.0032604711285959447
-      fp2_err: 0.06188258547369332
-      horizontal_c0: 0.9925673411920011
-      polynomial_range:
-        x_min: 10
-        x_max: 100
+    njet_0:
+      100:
+        f0_p0: 1.0417852317448648
+        f0_p1: -0.039976869728121624
+        f0_p2: 0.004552544622610171
+        f0_p3: 0.0
+        f0_p4: 0.0
+        f0_p5: 0.0
+        f0_p0_err: 0.30005048962508846
+        f0_p1_err: 0.1382319984959406
+        f0_p2_err: 0.013451496145336536
+        f0_p3_err: 0.0
+        f0_p4_err: 0.0
+        f0_p5_err: 0.0
+        f1_p0: 1.035857829698559
+        f1_p1: 0.0045711172855516955
+        f1_p2: 1.0526566290848253e-05
+        f1_p3: 2.7816442183068363e-06
+        f1_p4: -2.089781560891956e-08
+        f1_p5: 0.0
+        f1_p0_err: 0.49461085341163535
+        f1_p1_err: 0.0569150570965671
+        f1_p2_err: 0.002257128089053014
+        f1_p3_err: 3.441579463231068e-05
+        f1_p4_err: 1.6923385756372176e-07
+        f1_p5_err: 0.0
+        horizontal_c0: 2.484785946876423
+        polynomial_range:
+          xmin1: 10
+          xmax1: 120
+    njet_1:
+      100:
+        f0_p0: 0.9709687461386317
+        f0_p1: -0.04917701978256398
+        f0_p2: 0.008350039315244084
+        f0_p3: -0.0003485173761267567
+        f0_p4: 0.0
+        f0_p5: 0.0
+        f0_p0_err: 0.6527676299508949
+        f0_p1_err: 0.3667569181819843
+        f0_p2_err: 0.05992521955220137
+        f0_p3_err: 0.0028410440548204156
+        f0_p4_err: 0.0
+        f0_p5_err: 0.0
+        f1_p0: 1.0650305987993847
+        f1_p1: -0.012596883072027207
+        f1_p2: 0.00046075230725440186
+        f1_p3: -5.548875436982117e-06
+        f1_p4: 2.2657894767212516e-08
+        f1_p5: 0.0
+        f1_p0_err: 0.881805787335469
+        f1_p1_err: 0.06149246285688381
+        f1_p2_err: 0.0014864527227866318
+        f1_p3_err: 1.887342935933839e-05
+        f1_p4_err: 1.0243495207973612e-07
+        f1_p5_err: 0.0
+        horizontal_c0: 1.1273603291013832
+        polynomial_range:
+          xmin1: 14
+          xmax1: 100
+    njet_2:
+      100:
+        f0_p0: 0.8156969126106172
+        f0_p1: -0.027585354992117447
+        f0_p2: 0.003907533377370909
+        f0_p3: 0.0
+        f0_p4: 0.0
+        f0_p5: 0.0
+        f0_p0_err: 0.6673105084241877
+        f0_p1_err: 0.3835848694224256
+        f0_p2_err: 0.04656617674687625
+        f0_p3_err: 0.0
+        f0_p4_err: 0.0
+        f0_p5_err: 0.0
+        f1_p0: 0.8472826722747822
+        f1_p1: 9.112007886164387e-05
+        f1_p2: 2.9263029922258367e-05
+        f1_p3: -1.6340390225818852e-07
+        f1_p4: 0.0
+        f1_p5: 0.0
+        f1_p0_err: 0.4650133805970966
+        f1_p1_err: 0.03395481746763111
+        f1_p2_err: 0.00066498600412057
+        f1_p3_err: 3.7644424890788018e-06
+        f1_p4_err: 0.0
+        f1_p5_err: 0.0
+        horizontal_c0: 0.9940938886295678
+        polynomial_range:
+          xmin1: 8
+          xmax1: 120
 '2017':
   njet_0:
     100:
