Added 2016preVFP z-pt weights

--- a/data/zpt_rewgt/fitting/zpt_rewgt_params_minnlo.yaml
+++ b/data/zpt_rewgt/fitting/zpt_rewgt_params_minnlo.yaml
@@ -241,3 +241,94 @@
       polynomial_range:
         xmin1: 10
         xmax1: 100
+2016preVFP:
+  njet_0:
+    135:
+      f0_p0: 1.0062571252126171
+      f0_p1: -0.036453179565549276
+      f0_p2: 0.0041632489334282865
+      f0_p3: 0.0
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 0.658966198494824
+      f0_p1_err: 0.3032452878136071
+      f0_p2_err: 0.02951166227643403
+      f0_p3_err: 0.0
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 0.9766559846134224
+      f1_p1: 0.008489351286539163
+      f1_p2: -0.0002585772386368902
+      f1_p3: 7.330082155076462e-06
+      f1_p4: -4.9230491491483416e-08
+      f1_p5: 0.0
+      f1_p0_err: 0.811675809856424
+      f1_p1_err: 0.07372357532983523
+      f1_p2_err: 0.0023958212623382807
+      f1_p3_err: 3.5242130787651155e-05
+      f1_p4_err: 1.9322466968682606e-07
+      f1_p5_err: 0.0
+      horizontal_c0: 2.0591593408327533
+      polynomial_range:
+        xmin1: 10
+        xmax1: 100
+  njet_1:
+    54:
+      f0_p0: 0.9616384609589047
+      f0_p1: -0.04533001113725114
+      f0_p2: 0.008721193837146677
+      f0_p3: -0.0003954254230695616
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 1.1224543060593122
+      f0_p1_err: 0.6242970243232288
+      f0_p2_err: 0.10485416398659247
+      f0_p3_err: 0.005203697514151716
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 1.060912109753684
+      f1_p1: -0.008871911206274802
+      f1_p2: 0.0002228747431404332
+      f1_p3: -1.457285517247073e-06
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 1.3192639374410873
+      f1_p1_err: 0.09380125406799829
+      f1_p2_err: 0.002085704513768107
+      f1_p3_err: 1.4545970283969956e-05
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_c0: 1.0478582184779979
+      polynomial_range:
+        xmin1: 13
+        xmax1: 90
+  njet_2:
+    54:
+      f0_p0: 0.7480414610604371
+      f0_p1: 0.013123192809937297
+      f0_p2: -0.0003244711843115179
+      f0_p3: 0.0
+      f0_p4: 0.0
+      f0_p5: 0.0
+      f0_p0_err: 0.7295754523320398
+      f0_p1_err: 0.17577342467585128
+      f0_p2_err: 0.00883859336934706
+      f0_p3_err: 0.0
+      f0_p4_err: 0.0
+      f0_p5_err: 0.0
+      f1_p0: 0.8486514381649457
+      f1_p1: 0.0007368407609165598
+      f1_p2: 8.87820944083449e-06
+      f1_p3: -5.3125107709435666e-08
+      f1_p4: 0.0
+      f1_p5: 0.0
+      f1_p0_err: 1.1690042625541044
+      f1_p1_err: 0.058333590261752596
+      f1_p2_err: 0.0008796772164607105
+      f1_p3_err: 3.94844889510767e-06
+      f1_p4_err: 0.0
+      f1_p5_err: 0.0
+      horizontal_c0: 0.9478880109711867
+      polynomial_range:
+        xmin1: 20
+        xmax1: 150
